--- a/static/css/board.css
+++ b/static/css/board.css
@@ -382,7 +382,7 @@ table, th, td {
 */
 
 .users_team {
-    display: none;
+    /*display: none;*/
     width: 400px;
     margin-top: -69px;
     border: 1px solid rgb(185, 183, 183);
