improved burndown graph

--- a/views/default/board.html
+++ b/views/default/board.html
@@ -18,7 +18,8 @@
         task_no_belong : '{{=T("This task does not belong to another definition of ready")}}',
         remove_sucess : '{{=T("Removed Successfully!")}}',
         remove_error : '{{=T("Error in removal!")}}',
-        no_role : '{{=T("Some members of the team are without a paper, go TEAM and add their respective roles.")}}',
+        no_role : '{{=T("Some members of the team are without a paper, go TEAM PAGE and add their respective roles.")}}',
+        no_team : '{{=T("There are not members on the team, go TEAM PAGE and add new members.")}}',
         task_no_exist : '{{=T("first insert the card content.")}}',
         team_page : '{{=T("Team Page")}}',
         card_assign : '{{=T("Assign this card to a member of team before moving it")}}',
