--- a/views/default/statistics.html
+++ b/views/default/statistics.html
@@ -8,7 +8,7 @@
     {{pass}}
     // Global variables
     var txt = {
-        stories : '{{=T("Stories Points")}}',
+        stories_points : '{{=T("Stories Points")}}',
         burndow_chart : '{{=T("Burndown Chart")}}',
         day : '{{=T("Day")}}',
         points : ' {{=T("Story Points")}}',
